--- a/DialogueTweak.csproj
+++ b/DialogueTweak.csproj
@@ -23,7 +23,14 @@
 		<DotNetPath Condition=" '$(DotNetPath)' == '' ">dotnet</DotNetPath>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Solaestas.tModLoader.ModBuilder" Version="1.0.2.8" />
 		<PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="BepInEx.AssemblyPublicizer.MSBuild" Version="0.4.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<Publicize Include="tModLoader" />
+		<Publicize Include="FNA" />
 	</ItemGroup>
 </Project>
