--- a/DialogueTweak.csproj
+++ b/DialogueTweak.csproj
@@ -23,7 +23,11 @@
 		<DotNetPath Condition=" '$(DotNetPath)' == '' ">dotnet</DotNetPath>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Solaestas.tModLoader.ModBuilder" Version="1.0.2.8" />
+		<PackageReference Include="BepInEx.AssemblyPublicizer.MSBuild" Version="0.4.1">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<Publicize Include="tModLoader"/>
 		<PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
 	</ItemGroup>
 </Project>
