--- a/DialogueTweak.csproj
+++ b/DialogueTweak.csproj
@@ -23,11 +23,7 @@
 		<DotNetPath Condition=" '$(DotNetPath)' == '' ">dotnet</DotNetPath>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="BepInEx.AssemblyPublicizer.MSBuild" Version="0.4.1">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<Publicize Include="tModLoader" />
+		<PackageReference Include="Solaestas.tModLoader.ModBuilder" Version="1.1.2" />
 		<PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
 	</ItemGroup>
 </Project>
